--- a/static/styles/important/flashcard_list.css
+++ b/static/styles/important/flashcard_list.css
@@ -77,6 +77,7 @@ p.lapses {
 .flashcard-list .flashcard a .flashcard-element #answer {
     transform: translateY(40px);
     transition: transform 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    font-size: 12px;
 }
 
 
