--- a/flashcard/templates/flashcards/components/notes.html
+++ b/flashcard/templates/flashcards/components/notes.html
@@ -1,10 +1,10 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'styles/components/notes.css' %}">
 <div class="notes-container container">
-  <a href="{% url 'create_notes' %}?next={{ request.path }}"><div class="notes-header header">Notes <hr></div></a>
+  <a href="{% url 'create_notes' %}?next_url={{ request.path }}"><div class="notes-header header">Notes </div></a>
     <div class="notes-body body">
         {% for element in notes %}
-           <a href="{% url 'delete_notes' element.id %}">
+           <a href="{% url 'delete_notes' element.id %}?next_url={{ request.path }}">
             <div class="notes-element">
               <p class="notes-element-title">{{ element.title }}</p>
               <p class="notes-element-paragraph">{{ element.note }}</p>
