--- a/static/styles/important/subjects_list.css
+++ b/static/styles/important/subjects_list.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     padding: 5px;
     margin-top: 1rem;
-    background-color: #312e2e;
+    background-color: #222222;
     border-radius: 5px;
     height: 340px;
 
