--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -9,6 +9,9 @@
     font-family: "JetBrains Mono", "Segoe UI", serif;
 }
 
+body {
+    overflow: hidden;
+}
 
 .home-container div {
 
@@ -40,13 +43,10 @@
 }
 
 /*Center*/
-.center-home .statistics-div {
-    border-radius: 5px;
-    padding: 5px;
-    background-color: #e81d1d;
-    height: 200px;
+.center-home {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
-.center-home .subjects-list {
-
-}
+/*End*/
