Get the chat ready

--- a/flashcard/templates/flashcards/studying/completed.html
+++ b/flashcard/templates/flashcards/studying/completed.html
@@ -9,6 +9,10 @@
   <div class="completed">
     <p class="completed-p">You completed all the flashcards</p>
     <p>You studied {{ total_flashcards }} flashcards</p>
+
+      <div class="home-button">
+        <a href="{% url 'home' %}"><button class="go-home">Go to Home</button></a>
+      </div>
   </div>
 
 
