--- a/flashcard/templates/flashcards/studying/study.html
+++ b/flashcard/templates/flashcards/studying/study.html
@@ -21,10 +21,7 @@
        </div>
 
        <div class="score">
-         <p>How was your retention?</p>
-          <button class="bad" >Bad</button>
-          <button class="good">Good</button>
-          <button class="excellent">Excellent</button>
+          <button class="excellent">Next -></button>
        </div>
        </div>
 
