Create profiles page

--- a/flashcard/templates/flashcards/social/chat.html
+++ b/flashcard/templates/flashcards/social/chat.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'styles/social/chat.css' %}">
 
 <div class="chat-div">
-
+  <a href="{% url 'profiles' %}">Profiles</a>
 
 
 
