--- a/static/styles/social/chat.css
+++ b/static/styles/social/chat.css
@@ -1,5 +1,5 @@
 .chat-div {
-    background-color: deepskyblue;
+    background-color: slategrey;
     height: 100%;
     border-radius: 5px;
     padding: 1rem;
