--- a/flashcard/templates/flashcards/social/chat.html
+++ b/flashcard/templates/flashcards/social/chat.html
@@ -4,6 +4,34 @@
 <div class="chat-div">
   <a href="{% url 'profiles' %}">Profiles</a>
 
+  <div class="groups">
+    {% for group in groups %}
+      <a href="{% url 'group' group.id %}">
+        <div class="group">
+          <div class="left">
+            <img src="{{ group.image.url }}">
+          </div>
+          <div class="right">
+            <div class="group_name">{{ group.group_name }}</div>
+            <div class="last_message">
+              {% if group.last_message %}
+                <p class="last_message_sender">{{ group.last_message.sender.name }}: </p>
+                <div>
+                  <p class="last_message_body" >{{ group.last_message.message|slice:":20" }}...</p>
+                  <p class="last_message_created" >{{ group.last_message.created|timesince }} ago</p>
+                </div>
+              {% else %}
+                <p>No Message</p>
+              {% endif %}
+            </div>
+          </div>
+        </div>
 
-
+      </a>
+    {% endfor %}
+  </div>
+  <hr>
+  <a href="{% url 'create-group' %}">
+    <p>Groups</p>
+  </a>
 </div>
