--- a/static/styles/important/flashcard_list.css
+++ b/static/styles/important/flashcard_list.css
@@ -5,7 +5,7 @@
     border-radius: 5px;
 
     height: 507px;
-    background-color: #4e505b;
+    background-color: #F4F5F7;
 }
 
 .flashcard-list .flashcard {
@@ -101,4 +101,6 @@ p.lapses {
 }
 
 
-
+.flashcard-list a p.flashcard-title {
+    color: #333333;
+}
