--- a/static/styles/important/subjects_list.css
+++ b/static/styles/important/subjects_list.css
@@ -2,15 +2,20 @@
     display: flex;
     flex-direction: column;
     padding: 5px;
-    background-color: #222222;
+    background-color: #FFD700;
     border-radius: 5px;
     height: 490px;
 
 
 }
 
+.subjects-list a p {
+    color: #333333;
+}
+
 .subject a div p {
     font-size: 0.9rem;
+    color: #F0F8FF;
 }
 
 
