--- a/static/styles/important/topic_update.css
+++ b/static/styles/important/topic_update.css
@@ -11,7 +11,14 @@
     background-color: #0e3a77;
     padding: 3rem;
     border-radius: 5px;
+
+
 }
+
+.updateTopic-div div form .form-group label {
+    color: var(--background-color)
+}
+
 
 .updateTopic-div div.form-group {
     display: flex;
@@ -21,6 +28,8 @@
     padding: 10px;
     gap: 10px;
     width: 500px;
+
+
 
 }
 
@@ -60,6 +69,8 @@
     width: 80%;
     margin-left: 30px;
     margin-top: 30px;
+
+
 }
 
 
