--- a/static/styles/important/topics_list.css
+++ b/static/styles/important/topics_list.css
@@ -5,7 +5,7 @@
     border-radius: 5px;
 
     height: 507px;
-    background-color: rgba(9, 13, 86, 0.47);
+    background-color: #D2EAF0;
 
 }
 
@@ -94,6 +94,9 @@
     transform: translateY(0);
 }
 
+.topics-list a p {
+    color: #333333;
+}
 
 
 
