--- a/static/styles/social/chat.css
+++ b/static/styles/social/chat.css
@@ -1,5 +1,5 @@
 .chat-div {
-    background-color: slategrey;
+    background-color: #007BFF;
     min-height: 555px;
     max-height: 555px;
 
@@ -23,7 +23,7 @@
     gap: 10px;
 
     height: 50px;
-    background-color: #20251d;
+    background-color: #232d54;
     border-radius: 5px;
     padding: 5px;
 }
