Add search functionality

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
   </div>
 
   <div id="center" class="search">
-    <form class="header_search" method="get" action="{% url 'home' %}">
+    <form class="header_search" method="get" action="{% url 'search' %}">
       <input name="q" placeholder="Search" class="input">
       <button class="search-logo"><img src="{% static 'images/related/search.png' %}" class="search-logo-image"></button>
     </form>
