--- a/static/styles/main_dark.css
+++ b/static/styles/main_dark.css
@@ -190,7 +190,7 @@ nav .search div .search-logo {
     width: 24px;
 }
 
-nav .search data .search-logo .search-logo-image {
+nav .search data .search-logo img.search-logo-image {
     height: 24px;
     width: 24px;
 }
