--- a/static/styles/components/createTopic.css
+++ b/static/styles/components/createTopic.css
@@ -16,9 +16,6 @@
     padding: 10px;
     gap: 10px;
     width: 500px;
-
-
-
 }
 
 .createTopic-div form .form-group label {
@@ -34,8 +31,11 @@
     width: 100px;
     font-family: inherit;
     margin-left: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
 
-
+input[type='text'] {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .createTopic-div input#id_topic_name {
