--- a/flashcard/templates/flashcards/registration/login_registration.html
+++ b/flashcard/templates/flashcards/registration/login_registration.html
@@ -21,7 +21,7 @@
                         {% csrf_token %}
                         <div>
                             <label for="email">Email</label>
-                            <input type="text" name="email" id="email" required>
+                            <input type="email" name="email" id="email" required>
                         </div>
                         <div>
                             <label for="password">Password</label>
