--- a/static/styles/components/file.css
+++ b/static/styles/components/file.css
@@ -1,10 +1,3 @@
-.file-container.container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-
 .file-container {
     height: 245px;
     width: 100%;
@@ -13,8 +6,16 @@
 
     font-size: 11px;
 
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow: scroll;
 
     background-color: #55e326;
+}
+
+.file-container a p {
+    font-size: 15px;
 }
 
 .file-div {
