--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -16,7 +16,7 @@
 
     /*All general things*/
     --text-color-light: #000;
-    --background-color: #fff;
+    --background-color: #2d2828;
     --box-shodow-color: rgb(87, 85, 85);
 
     
