--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
     <a href="{% url 'home' %}">
 {#      Thanks to manshagraphics for providing the image#}
       <img src="{% static 'images/related/logo.png' %}" class="logo-image">
-        <p>Flashy</p>
+        <p>My Document</p>
     </a>
   </div>
 
