--- a/static/styles/components/file.css
+++ b/static/styles/components/file.css
@@ -11,7 +11,13 @@
     gap: 10px;
     overflow: scroll;
 
-    background-color: #55e326;
+    background-color: #3b8585;
+
+    transition: background-color 0.2s ease-in-out;
+}
+
+.file-container:hover {
+    background-color: #028181;
 }
 
 .file-container a p {
@@ -23,7 +29,7 @@
     max-width: 250px;
     border-radius: 5px;
     padding: 5px;
-    background-color: #FFA07A;
+    background-color: #68a6a6;
 }
 
 .file-div p {
