--- a/static/styles/important/subjects_list.css
+++ b/static/styles/important/subjects_list.css
@@ -2,15 +2,21 @@
     display: flex;
     flex-direction: column;
     padding: 5px;
-    background-color: #FFD700;
+    background-color: #155ab0;
     border-radius: 5px;
     height: 475px;
 
+    transition: background-color 0.5s ease-in-out;
+
+}
+
+.subjects-list:hover {
+    background-color: #0e3a77;
 
 }
 
 .subjects-list a p {
-    color: #333333;
+    color: #fafafa;
 }
 
 
