--- a/static/styles/main_dark.css
+++ b/static/styles/main_dark.css
@@ -1,13 +1,24 @@
 :root {
+    /*For light theme*/
+
+    --search-form-light-background: rgba(189, 173, 173, 0.78);
+    --logo-font-light-color: #e7d7d7;
+    --background-color: #defffa;
+    --text-color-light: #111111;
+    --search-button-light-color: #a89f9f;
+    --search-form-button-color: invert(100%);
+    --box-shadow-color: rgb(166, 155, 155);
+
 
     /*For dark theme*/
-    --search-form-light-background: rgba(120, 131, 155, 0.2);
-    --logo-font-light-color: #333333;
-    --background-color: #F0F8FF;
-    --text-color-light: #333333;
-    --search-button-light-color: #000;
-    --search-form-button-color: invert(100%);
-    --box-shodow-color: rgb(77, 77, 77);
+
+    /*--search-form-light-background: rgba(225, 210, 210, 0.78);*/
+    /*--logo-font-light-color: #171616;*/
+    /*--background-color: #05213a;*/
+    /*--text-color-light: #ffffff;*/
+    /*--search-button-light-color: #efefef;*/
+    /*--search-form-button-color: invert(100%);*/
+    /*--box-shadow-color: rgb(49, 46, 46);*/
 
     /*Login button */
     --login-button-background: #fff;
